# nexus

./: .gitmodules  CMakeLists.txt  Makefile  README.md  Spielfeld.h  basis Hybrid.h  basis.cpp  bp.cpp  chess_types.h  consts.h  debug_ctest  evalutation.h  globals.h  io_util.cpp  io_util.h  main Hybrid.cpp  main.cpp  moves.cpp  moves.h  surge_test.cpp
competition/: competition.ipynb  competition.py  matrix_plot.py  pprint.py  requirements.txt  result.yml  str_tools.py  tournament.py  winner_stats_plot.py
plog/: Init.h  Log.h  Logger.h  Record.h  Severity.h  Util.h  WinApi.h
plog/Appenders/: AndroidAppender.h  ColorConsoleAppender.h  ConsoleAppender.h  DebugOutputAppender.h  DynamicAppender.h  EventLogAppender.h  IAppender.h  RollingFileAppender.h
plog/Converters/: NativeEOLConverter.h  UTF8Converter.h
plog/Formatters/: CsvFormatter.h  FuncMessageFormatter.h  MessageOnlyFormatter.h  TxtFormatter.h
plog/Helpers/: AscDump.h  HexDump.h  PrintVar.h
plog/Initializers/: ConsoleInitializer.h  RollingFileInitializer.h
src/: basis.h  bp.cpp  main.cpp
tests/: hello_test.cc  test_fen.cc
